[tool.poetry]
name = "nautobot_ansible_modules"
version = "5.12.0"
description = "Ansible collection to interact with Nautobot's API"
authors = ["Network to Code <opensource@networktocode.com>"]
license = "Apache 2.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
netutils = "^1.2"
pynautobot = "^2.6.2"
ansible-core = "^2.16"
aiohttp = "^3.11.13"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
ansible-lint = "*"
black = "*"
cryptography = "*"
jinja2 = "*"
jmespath = "*"
jsondiff = "*"
pytest = "*"
pytest-asyncio = "^0.25.3"
pytest-mock = "*"
pytest-xdist = "*"
pyyaml = "*"
mock = "*"
importlib-metadata = "*"
pylint = "*"
hypothesis = "*"
pytest-pythonpath = "*"
parameterized = "*"
invoke = "*"
bandit = "*"
pytest-forked = "*"
# Rendering docs to HTML
mkdocs = "1.6.1"
# Material for MkDocs theme
mkdocs-material = "9.5.30"
# Render custom markdown for version added/changed/remove notes
markdown-version-annotations = "1.0.1"
# Render dynamic pages for Ansible Collections documentation
mkdocs-ansible-collection = "1.0.0"
towncrier = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_paths = "./"
addopts = "-vv"

[tool.black]
line-length = 160
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
  | collections     # Locally installed collections
)
'''

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long
    """

[tool.towncrier]
name = "nautobot-ansible"
directory = "changes"
filename = "CHANGELOG.md"
template = "changes/towncrier_template.j2"
start_string = "<!-- towncrier release notes start -->\n"
issue_format = "[#{issue}](https://github.com/nautobot/nautobot-ansible/issues/{issue})"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "housekeeping"
name = "Housekeeping"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true
